Make social media links configurable

--- a/templates/social-media.html.twig
+++ b/templates/social-media.html.twig
@@ -1,5 +1,5 @@
 <div class="social-media">
-    <a href="https://www.facebook.com/Intracto/" class="facebook" target="_blank"><i
+    <a href="{{ facebook_url }}" class="facebook" target="_blank"><i
         class="fa fa-facebook">Facebook</i></a>
     <a href="https://twitter.com/intracto" class="twitter" target="_blank"><i
         class="fa fa-twitter">Twitter</i></a>
